<resources>
    <string name="app_name">About Me</string>
    <string name="my_name">Ted</string>
    <string name="yellow_star">yellow star</string>
    <string name="bio">Albert Einstein (tiếng Đức: [ˈalbɐt ˈaɪnʃtaɪn]  (Speaker Icon.svg nghe), phiên âm: Anh-xtanh; 14 tháng 3 năm 1879 – 18 tháng 4 năm 1955) là nhà vật lý lý thuyết người Đức, người đã phát triển thuyết tương đối tổng quát, một trong hai trụ cột của vật lý hiện đại (trụ cột kia là cơ học lượng tử).[2][3] Mặc dù được biết đến nhiều nhất qua phương trình về sự tương đương khối lượng-năng lượng E = mc2 (được xem là \"phương trình nổi tiếng nhất thế giới\"),[4] ông lại được trao Giải Nobel Vật lý năm 1921 \"cho những cống hiến của ông đối với vật lý lý thuyết, và đặc biệt cho sự khám phá ra định luật của hiệu ứng quang điện\".[5] Công trình về hiệu ứng quang điện của ông có tính chất bước ngoặt khai sinh ra lý thuyết lượng tử.
        \n\nKhi bước vào sự nghiệp của mình, Einstein đã nhận ra cơ học Newton không còn có thể thống nhất các định luật của cơ học cổ điển với các định luật của trường điện từ. Từ đó ông phát triển thuyết tương đối đặc biệt, với các bài báo đăng trong năm 1905. Tuy nhiên, ông nhận thấy nguyên lý tương đối có thể mở rộng cho cả trường hấp dẫn, và điều này dẫn đến sự ra đời của lý thuyết về hấp dẫn trong năm 1916, năm ông xuất bản một bài báo về thuyết tương đối tổng quát. Ông tiếp tục nghiên cứu các bài toán của cơ học thống kê và lý thuyết lượng tử, trong đó đưa ra những giải thích về lý thuyết hạt và sự chuyển động của các phân tử. Ông cũng nghiên cứu các tính chất nhiệt học của ánh sáng và đặt cơ sở cho lý thuyết lượng tử ánh sáng. Năm 1917, Einstein sử dụng thuyết tương đối tổng quát để miêu tả mô hình cấu trúc của toàn thể vũ trụ.[6] Cùng với Satyendra Nath Bose, năm 1924-1925 ông tiên đoán một trạng thái vật chất mới đó là ngưng tụ Bose-Einstein của những hệ lượng tử ở trạng thái gần độ không tuyệt đối.[7] Tuy cũng là cha đẻ của thuyết lượng tử, nhưng ông lại tỏ ra khắt khe với lý thuyết này. Điều này thể hiện qua những tranh luận của ông với Niels Bohr và nghịch lý EPR về lý thuyết lượng tử.[8]
        \n\nKhi ông đang thăm Hoa Kỳ thì Adolf Hitler lên nắm quyền vào năm 1933, do vậy ông đã không trở lại nước Đức, nơi ông đang là giáo sư ở Viện Hàn lâm Khoa học Berlin. Ông định cư tại Hoa Kỳ và chính thức trở thành công dân Mỹ vào năm 1940.[9] Vào lúc sắp diễn ra Chiến tranh thế giới lần hai, ông đã ký vào một lá thư cảnh báo Tổng thống Franklin D. Roosevelt rằng Đức Quốc xã có thể đang nghiên cứu phát triển \"một loại bom mới cực kỳ nguy hiểm\" và khuyến cáo nước Mỹ nên có những nghiên cứu tương tự. Thực sự, nó đã dẫn đến sự ra đời của Dự án Manhattan sau này. Einstein ủng hộ bảo vệ các lực lượng Đồng minh, nhưng nói chung chống lại việc sử dụng phát kiến mới về phân hạch hạt nhân làm vũ khí. Sau này, cùng với nhà triết học người Anh Bertrand Russell, ông đã ký Tuyên ngôn Russell–Einstein, nêu bật sự nguy hiểm của vũ khí hạt nhân. Einstein làm việc tại Viện Nghiên cứu Cao cấp ở Princeton, New Jersey cho đến khi ông qua đời vào năm 1955.
        \n\nEinstein đã công bố hơn 300 bài báo khoa học và hơn 150 bài viết khác về những chủ đề khác nhau, ông cũng nhận được nhiều bằng tiến sĩ danh dự trong khoa học, y học và triết học từ nhiều cơ sở giáo dục đại học ở châu Âu và Bắc Mỹ.[6][10] Ông được tạp chí Times gọi là \"Con người của thế kỷ\". Những thành tựu tri thức lớn lao của ông đã khiến tên gọi \"Einstein\" đã trở nên đồng nghĩa với từ thiên tài</string>
    <string name="clock_image">clock image</string>
    <string name="done_button">Done</string>
    <string name="what_is_your_nick_name">What is your nick name?</string>
    <string name="nick_name">Nick Name</string>
    <string name="name">Name</string>
</resources>
